# icmc-cg

./: CMakeLists.txt  catavento.cpp  main.cpp
cpp_src/: catavento.cpp  catavento.hpp  cg_window.cpp  cg_window.hpp
